Fixed CompanyDetailedAPIView
